# meshtastic-gui

./: .gitignore  LICENSE  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  run.bat  run.sh  test_install.py
src/meshtastic_gui/: __init__.py  __main__.py  gui.py
